sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__ungiven11/errors.jtrrouter
Error: Missing maxspeed definition in lane '1_0'.
Quitting (on error).
